<resources>
    <string name="app_name">MediBot</string>
    <string name="doctor_image">Doctor Image</string>
    <string name="view_doctors">View Doctors</string>
    <string name="app_logo">App Logo</string>
    <string name="email">Email</string>
    <string name="fullName">Full Name</string>
    <string name="photoURL">Photo URL</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="appointments">Appointments</string>
    <string name="chatbot">Chatbot</string>
    <string name="doctors">Doctors</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="view_details">View Details</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="doctor_overview">Doctor Overview</string>
    <string name="biography">Biography</string>
    <string name="schedule">Schedule</string>
    <string name="location">Location</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="canceled">Canceled</string>
    <string name="my_appointments">My Appointments</string>
    <string name="patients">Patients</string>
    <string name="experience">Experience</string>
    <string name="reviews">Reviews</string>
    <string name="turn_on_location">Turn on location</string>
    <string name="enable_location_description">Enable location sharing to view nearby doctors and hospitals.</string>
    <string name="turn_on">TURN ON</string>
    <string name="no_thanks">NO, THANKS</string>
    <string name="turn_on_notifications">Turn on notifications</string>
    <string name="enable_notifications_description">Enable notifications to receive timely alerts about your booked appointments</string>
    <string name="medibot">MediBot</string>
    <string name="medibot_description">Easily schedule doctor appointments with our Assistant Bot guiding you to the most suitable specialist.</string>
    <string name="continue_str">CONTINUE</string>
    <string name="notification_icon">Notification_icon</string>
    <string name="upcoming_notification">Upcoming</string>
    <string name="recent_notification">Recent</string>
    <string name="no_upcoming_notifications">No upcoming notifications</string>
    <string name="no_recent_notifications">No recent notifications</string>
    <string name="no_scheduled_appointments">No scheduled appointments</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="user_avatar">User Avatar</string>
    <string name="user_profile">User Profile</string>
    <string name="sign_out_icon">Sign Out Icon</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_profile">Change Profile</string>
    <string name="save_profile">Save Profile</string>
    <string name="email_johndoe">Email: JohnDoe</string>
    <string name="username_johndoe">Username: JohnDoe</string>
    <string name="date_created_01_01_2020">Date Created: 01/01/2020</string>
    <string name="hello">Hello</string>
    <string name="how_do_you_feel_today">How do you feel today?</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="browse_doctors_by_specialty">Browse Doctors by Specialty</string>
    <string name="see_all">See All</string>
    <string name="receive_updates_and_alerts">Receive updates and alerts</string>
    <string name="current_location">Current Location</string>
    <string name="allow_access_to_your_location">Allow access to your location</string>
    <string name="dark_mode">Dark mode</string>
    <string name="view_the_app_in_dark_mode">View the app in dark mode</string>
    <string name="language">Language</string>
    <string name="choose_your_preferred_language">Choose your preferred language</string>
    <string name="switch_account">Switch account</string>
    <string name="booking">Booking</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="how_did_the_appointment_go">How did the appointment go?</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="complete_appointment">Complete the appointment</string>
    <string name="enter_appointment_details">Enter appointment details</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="date">Date</string>
    <string name="details">Details:</string>
    <string name="doctors_near_you">Doctors Near You</string>
    <string name="cardiologist">Cardiologists</string>
    <string name="neurologist">Neurologists</string>
    <string name="gastroenterologist">Gastroenterologists</string>
    <string name="dentist">Dentists</string>
    <string name="dermatologist">Dermatologists</string>
    <string name="psychiatrist">Psychiatrists</string>
    <string name="allergist">Allergists</string>
    <string name="nephrologist">Nephrologists</string>
    <string name="pediatrician">Pediatricians</string>

    <string name="doctor_appointments_will_appear_here">Doctor appointments will appear here</string>
    <string name="appointments_list">Appointments list</string>
    <string name="send_doctor_request">Send Doctor request</string>
    <string name="hospital">Hospital</string>
    <string name="photo_url">Photo Url</string>
    <string name="doctor_role_request">Doctor Role Request</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="specialty">Specialty</string>
    <string name="bio">Bio</string>
    <string name="experience_in_years">Experience (in years)</string>
    <string name="no_file_selected">No file selected</string>
    <string name="upload_cv_pdf">Upload CV (PDF)</string>
    <string name="submit_request">Submit Request</string>
    <string name="select_available_work_hours">Select Available Work Hours:</string>
    <string name="requests">Requests</string>
    <string name="doctor_role_requests">Doctor Role Requests</string>
    <string name="dr_full_name">Dr. Full Name</string>
    <string name="view_documents">View Documents</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="doctor_requests_list">Doctor Requests List</string>
    <string name="specialty_default">Specialty</string>
    <string name="my_patients">My Patients</string>
    <string name="please_log_in_to_continue">Please log in to continue</string>
    <string name="write_message_here">Write message here</string>

    <string-array name="languages">
        <item>EN</item>
        <item>MK</item>
        <item>FR</item>
    </string-array>


</resources>