<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_profile"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_user_24"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/user_avatar"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_johndoe"
        android:textSize="22sp"
        android:layout_marginBottom="8dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_johndoe"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/dateCreated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_created_01_01_2020"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/changeProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/blue_500"
        android:text="@string/change_profile"
        android:textColor="@color/gray_000"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/blue_500"
        android:text="@string/sign_out"
        android:textColor="@color/gray_000"
        android:layout_gravity="center"/>

</LinearLayout>
