<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="16dp"
    android:paddingHorizontal="6dp"
    tools:context=".AppointmentsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/my_appointments"
        android:textColor="@color/gray_900"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <!-- Tabs for Upcoming, Completed, Canceled -->
    <LinearLayout
        android:id="@+id/tabsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_white_radius10"
        android:padding="8dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="60dp"
        android:elevation="2dp"
        android:gravity="center"
        android:clipToPadding="false">

        <TextView
            android:id="@+id/tvUpcoming"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/upcoming"
            android:textSize="14sp"
            android:textColor="@color/blue_900" />

        <View
            android:layout_width="1dp"
            android:layout_height="32dp"
            android:background="@color/gray_700"
            android:layout_marginHorizontal="8dp" />

        <TextView
            android:id="@+id/tvCompleted"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/completed"
            android:textSize="14sp"
            android:textColor="@color/blue_900" />

        <View
            android:layout_width="1dp"
            android:layout_height="32dp"
            android:background="@color/gray_700"
            android:layout_marginHorizontal="8dp" />

        <TextView
            android:id="@+id/tvCanceled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/canceled"
            android:textSize="14sp"
            android:textColor="@color/blue_900" />
    </LinearLayout>

    <TextView
        android:id="@+id/noAppointmentsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_scheduled_appointments"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/gray_600"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/tabsLayout"/>

    <!-- RecyclerView for appointments -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/appointmentsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tabsLayout"
        android:padding="8dp" />
</RelativeLayout>
