<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <LinearLayout
            android:id="@+id/leftColumn"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rightColumn">

            <TextView
                android:id="@+id/tvDoctorFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dr_full_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/gray_800"/>

            <TextView
                android:id="@+id/tvSpecialty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/specialty"
                android:textSize="14sp"
                android:textColor="@color/gray_700"
                android:layout_marginTop="2dp" />

            <Button
                android:id="@+id/btnViewDocuments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_documents"
                android:textSize="14sp"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/blue_500"
                android:textColor="@color/white"
                app:cornerRadius="50dp"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/rightColumn"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageButton
                android:id="@+id/btnApprove"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="4dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@android:drawable/ic_input_add"
                android:contentDescription="@string/approve"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:tint="@android:color/holo_green_dark"
                android:layout_marginEnd="10dp"/>

            <ImageButton
                android:id="@+id/btnDeny"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="4dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:contentDescription="@string/deny"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:tint="@android:color/holo_red_dark" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
